H264播放器的实现

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Video_Audio</string>
+    <string name="stv_mediacodec_h264_player">MediaCodec播放H264</string>
 </resources>
