Android音视频开发——MediaCodec播放H264视频

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Video_Audio</string>
     <string name="stv_mediacodec_h264_player">MediaCodec播放H264</string>
+    <string name="stv_codec_out_image">编码输出图片</string>
 </resources>
